# dq

./: .gitignore  README.md  TODO.txt  logger_config.py  pyproject.toml  pyproject.toml.bak  pytest.ini  report.html  requirements.txt  setup.py
dq/: __init__.py  config.py  connection.py  exceptions.py  process.py  test.py  test_results.py  validators.py
dq/clickhouse/: ClickhouseConnection.py  ClickhouseConnectionConfig.py
dq/core/: config.py  connection.py
dq/report/: dsl.py  index-3.html  index.html  model.py  report.py  report_generator.py  template.html
dq/report/templates/: bigtext.html  card.html  icons.html  index.html  misc.html  page.html  page_summary.html  progress_rag.html  report.html  row.html  sidebar.html
dq/report/templates/table/: table.html  td.html  th.html  tr.html
dq/utils/: performance.py
ideas/: as_decorator.py
src/dq/: cli.py  plugin_manager.py  process.py  validators.py
src/dq/core/: dbadapter.py  plugin.py
src/dq/environments/sqlite/: plugin.py  (+3 more)
src/dq/report/: model.py  report_generator.py
src/dqlite/: __init__.py  cli.py  connection.py  plugin_manager.py  process.py  test_run.py
src/dqlite/core/: config.py
src/dqlite/report/: index.html  model.py  report_generator.py  template.html
src/dqlite/utils/: performance_timer.py
tests/: environments.yaml  local_testing.txt  test_load_config.py  test_load_dqtests.py  test_sqllite_connection.py  test_testprocessor.py
tests/config/: test_config.py  test_config.yaml
tests/db/: test_process.py  test_queries.sql
tests/integration/: test_process.py
tests/report/: test_dsl.py  test_report_generator.py
tests/unit/: test_load_dqtests.py  test_plugin_manager.py  test_sqllite_connection.py  test_testprocessor.py
tests/unit/config/: test_config.py  test_secrets.yaml
tests/unit/utils/: test_performance_timer.py
tests/utils/: test_performance_timer.py
(+18 files in other folders)
