[tool.poetry]
name = "dqlite"
version = "0.1.0"
description = "Lite data quality testing framework"
authors = ["Max Korotkov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
dqlite = "dqlite.cli:main"

[tool.poetry.plugins."dqlite.plugins"]
clickhouse = "dqlite.environments.clickhouse.plugin:ClickhousePlugin"
clickhouse_http = "dqlite.environments.clickhouse_http.plugin:ClickhouseHttpPlugin"
sqlite = "dqlite.environments.sqlite.plugin:SQLitePlugin"
